# readwise2anki

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml
readwise2anki/: __init__.py  anki.py  cache.py  cli.py  process.py
readwise_api/: __init__.py  client.py  export.py
