[project]
name = "readwise2anki"
version = "0.1.5"
description = "CLI tool to sync Readwise highlights to Anki"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.31.0",
    "genanki>=0.13.0",
    "markdown>=3.0",
]

[project.scripts]
readwise2anki = "readwise2anki.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.8.0",
]
